samples/_failures_safe/1761130701_f5ef2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_162766e6.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_162766e6.c:155:18: error: ‘TOKEN_’ undeclared (first use in this function)
  155 |             case TOKEN_
      |                  ^~~~~~
./samples/SAFE/__tmp_162766e6.c:155:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_162766e6.c:155:13: error: expected ‘:’ or ‘...’ at end of input
  155 |             case TOKEN_
      |             ^~~~
./samples/SAFE/__tmp_162766e6.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_162766e6.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_162766e6.c:155:13: error: expected declaration or statement at end of input
